Changed package manager to 'pnpm'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ghom/bot.ts",
+  "name": "lg-bot-v1",
   "version": "v7.0.0-Senchu",
   "author": "ghom",
   "description": "Discord bot in TypeScript",
@@ -52,10 +52,10 @@
     "prettier": "^3.2.5",
     "regex-parser": "^2.2.11",
     "simple-git": "^3.24.0",
-    "sqlite3": "^5.0.8",
     "tims": "^2.1.0",
     "types-package-json": "^2.0.39",
-    "yargs-parser": "^21.0.1"
+    "yargs-parser": "^21.0.1",
+    "pg": "latest"
   },
   "devDependencies": {
     "@esbuild/linux-x64": "^0.20.1",
