--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "figlet": "^1.5.2",
     "ghom-eval": "^1.1.3",
     "ghom-prettify": "^3.0.0",
-    "knex": "^3.0.1",
+    "knex": "^3.1.0",
+    "pg": "latest",
     "prettier": "^3.2.5",
     "regex-parser": "^2.2.11",
+    "short-unique-id": "^5.2.0",
     "simple-git": "^3.24.0",
     "tims": "^2.1.0",
     "types-package-json": "^2.0.39",
-    "yargs-parser": "^21.0.1",
-    "pg": "latest"
+    "yargs-parser": "^21.0.1"
   },
   "devDependencies": {
     "@esbuild/linux-x64": "^0.20.1",
