--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "imports": {
     "#app": "./dist/app.js",
     "#app/*": "./dist/*",
-    "#tables/*": "./dist/tables/*"
+    "#tables/*": "./dist/tables/*",
+    "#env": "./dist/app/env.js",
+    "#config": "./dist/config.js",
+    "#client": "./dist/app/client.js",
+    "#logger": "./dist/app/logger.js"
   },
   "scripts": {
     "build": "gulp build",
@@ -38,7 +42,7 @@
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
     "@ghom/handler": "^3.1.0",
-    "@ghom/logger": "^1.2.0",
+    "@ghom/logger": "^2.0.1",
     "@ghom/orm": "^1.7.0",
     "boxen": "^7.0.0",
     "chalk": "^5.0.1",
@@ -58,7 +62,8 @@
     "simple-git": "^3.24.0",
     "tims": "^2.1.0",
     "types-package-json": "^2.0.39",
-    "yargs-parser": "^21.0.1"
+    "yargs-parser": "^21.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@esbuild/linux-x64": "^0.20.1",
