--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "allowImportingTsExtensions": true,
     "paths": {
       "#app": ["./src/app.ts"],
-      "#app/*": ["./src/*"],
+      "#config": ["./src/config.ts"],
+      "#env": ["./src/app/env.ts"],
+      "#client": ["./src/app/client.ts"],
+      "#logger": ["./src/app/logger.ts"],
+      "#database": ["./src/app/database.ts"],
+      "#src/*": ["./src/*"],
       "#tables/*": ["./src/tables/*"]
     }
   },
